--- a/Lab1-Model/src/makefile
+++ b/Lab1-Model/src/makefile
@@ -1,15 +1,22 @@
 CC = g++
 CFLAGS = -I. -I../inc -g
-OBJ = objPos.o objPosArrayList.o objPosDLinkedList.o GameMechs.o MacUILib.o Player.o ItemBin.o ScreenDrawer.o MainGame.o 
+OBJ = objPos.o objPosArrayList.o GameMechs.o MacUILib.o Player.o ItemBin.o ScreenDrawer.o MainGame.o 
 DEPS = *.h
-#POSTLINKER = -lncurses   ## uncomment this if on Linux
+
+ifeq (${OS}, Windows_NT)
+	OSSETTING = -DWINDOWS
+else
+	OSSETTING = -DPOSIX
+	POSTLINKER = -lncurses 
+endif
+
 EXEC = Project
 
 %.o: %.cpp $(DEPENDS)
-	$(CC) -c -o $@ $< $(CFLAGS)
+	$(CC) ${OSSETTING} -c -o $@ $< $(CFLAGS)
 
 ${EXEC} : $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS) ${POSTLINKER}
+	$(CC)  ${OSSETTING} -o $@ $^ $(CFLAGS) ${POSTLINKER}
 
 clean :
 	rm -rf ${OBJ} ${EXEC} ${EXEC}.exe
