added test case counts

--- a/Lab1-Model/src/makefile
+++ b/Lab1-Model/src/makefile
@@ -7,7 +7,7 @@ ifeq (${OS}, Windows_NT)
 	OSSETTING = -DWINDOWS
 else
 	OSSETTING = -DPOSIX
-	POSTLINKER = -lncurses 
+	POSTLINKER = -lncurses   ## uncomment this if on Linux
 endif
 
 EXEC = Project
